- Fixed when it was not autoscrolling on commands. - Fixed the move animations. - Started adding premove.

--- a/chess.css
+++ b/chess.css
@@ -348,6 +348,14 @@
 
 /* Resize handle removed */
 
+.premove-start {
+    filter: brightness(80%);
+}
+
+.premove-end {
+    filter: brightness(80%);
+}
+
 .selected {
     filter: brightness(80%);
 }
