Valid moves now show as a small circle in the square where moves are valid.

--- a/css/chess.css
+++ b/css/chess.css
@@ -361,11 +361,37 @@
 }
 
 .valid-move {
-    filter: brightness(80%);
+    position: relative;
+}
+
+.valid-move::after {
+    content: '';
+    position: absolute;
+    width: 20%;
+    height: 20%;
+    background-color: darkgray;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
 }
 
 .valid-move-hover {
-    filter: brightness(80%);
+    position: relative;
+}
+
+.valid-move-hover::after {
+    content: '';
+    position: absolute;
+    width: 20%;
+    height: 20%;
+    background-color: darkgray;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
 }
 
 .last-move-start, .last-move-end {
