--- a/css/chess.css
+++ b/css/chess.css
@@ -403,7 +403,7 @@
     position: absolute;
     width: 20%;
     height: 20%;
-    background-color: darkgray;
+    background-color: black;
     border-radius: 50%;
     top: 50%;
     left: 50%;
