--- a/css/chess.css
+++ b/css/chess.css
@@ -753,7 +753,7 @@
 
 .moves-list-display {
     width: 100%;
-    max-height: 100px; /* Height for the scrollable area */
+    max-height: 88px; /* Height for the scrollable area */
     overflow-y: auto;
     padding-right: 2px;
 }
@@ -781,6 +781,7 @@
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2), inset 0 1px 0 rgba(255, 255, 255, 0.6);
     cursor: pointer;
     font-size: 14px;
+    font-weight: bold;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -829,7 +830,7 @@
 .move-san {
     cursor: pointer;
     flex-grow: 1;
-    font-size: 1.25em;
+    font-size: 1.0em;
     font-family: Arial, sans-serif; /* Ensure good Unicode support */
 }
 
