- Fixed bugs when moving pieces. - Pieces are no longer clonned and use a single function for event handlers. - Images are only updated when they change.

--- a/css/chess.css
+++ b/css/chess.css
@@ -403,7 +403,7 @@
     position: absolute;
     width: 20%;
     height: 20%;
-    background-color: black;
+    background-color: darkgray;
     border-radius: 50%;
     top: 50%;
     left: 50%;
@@ -429,12 +429,12 @@
 }
 
 .last-move-start, .last-move-end {
-    /*filter: brightness(70%);*/
+    filter: brightness(60%);
 }
 
 .last-move-start.last-move-fade, .last-move-end.last-move-fade {
-    /*filter: brightness(100%);*/
-    /*transition: filter 2s ease;*/
+    filter: brightness(100%);
+    transition: filter 2s ease;
 }
 
 .game-controls {
