--- a/css/chess.css
+++ b/css/chess.css
@@ -593,7 +593,7 @@
 }
 
 .game-action-link {
-    font-size: .95em;
+    font-size: calc(16px * var(--font-scale, 1));
     font-weight: bold;
     color: black;
     text-decoration: none;
@@ -927,7 +927,7 @@
     max-width: 100%;
     cursor: help;
     font-weight: bold;
-    font-size: 1em;
+    font-size: calc(16px * var(--font-scale, 1));
     color: black;
     padding: 4px 0;
     min-height: 20px;
@@ -948,9 +948,9 @@
     position: absolute;
     font-weight: bold;
     top: -15px;
-    left: -18px;
+    left: -5px;
     width: 100%;
-    font-size:1em;
+    font-size: calc(16px * var(--font-scale, 1));
     color: black;
     text-align: center;
     margin-bottom: 4px;
